--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "devDependencies": {},
   "scripts": {
+    "start-server": "node ./server/server.js",
+    "start-client": "node ./client/client.js",
     "server1": "grape --dp 20001 --aph 30001 --bn '127.0.0.1:20002'",
     "server2": "grape --dp 20002 --aph 40001 --bn '127.0.0.1:20001'"
   },
